--- a/_posts/2023-02-18-thesis.md
+++ b/_posts/2023-02-18-thesis.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Thesis - Playing with Systems"
+title: "Playing with Systems"
 ---
 
 ![Alt text](../assets/img/posts/thesis/thumbnail.jpg)
